# hex-game

./: README.md  _chat.py  config.py  constants.py  frontline_game.py  hex_game.py  hex_grid.py  main.py  notes.txt  play_hex.py  pyproject.toml  requirements.txt  ui.py
legacy_frontline/: fl_combat.py  fl_constants.py  fl_grid.py  fl_main.py  fl_ui.py
src/hex_game/: __init__.py  __main__.py  assets.py  config.py  game.py  grid.py  layout.py  play.py  play_hex.py  render.py  runtime.py
src/hex_game/boards/: __init__.py  hex_generation.py  hex_specs.py
src/hex_game/core/: __init__.py  game.py  grid.py
src/hex_game/runtime/: __init__.py
src/hex_game/ui/: renderer.py
src/hex_game/visual/: __init__.py  assets.py  colors.py  icons.py  theme.py
tests/: test_smoke.py
